[package]
name = "caos2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "^2.7"
pest_derive = "^2.7"
lazy_static = "^1.4"
caos-macros = { path = "caos-macros" }

[dev-dependencies]
walkdir = "^2.4"

[[example]]
name="scan_file"
